feat: style 폴더 구조 및 기본 스타일링

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,11 @@
+// default
 @use 'base';
+@use 'variables';
+
+// layout
+@use 'layout';
+
+// components
+@use './components/header';
+@use './components/Contents';
+@use './components/Footer';
