feat: 프로젝트 랜더링 및 기본 스타일 적용

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
 @use 'layout';
 
 // components
-@use './components/header';
-@use './components/Contents';
+@use './components/Header';
 @use './components/Footer';
+
+// pages
+@use 'pages/ProfileMain';
