--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+html, body {
+    width: 100%;
+    height: 100%;
+    min-width: calc(100vw - 20px);
+    min-height: 100vh;
+}
+
+#JangHwanPark {
+    width: 100%;
+    height: 100%;
+}
