:art: chore - 다크모드 컴포넌트 디자인 수정
- 기존 버튼 형식에서 스위치 버튼으로 변경

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+/* 테마 변수 */
+@theme {
+
+}
+
 /* 다크모드 */
 @variant dark (&:where([data-them=dark], [data-theme=dark] *));
 
