:art: chore - About, Home 컴포넌트 사이즈 반응형 작업

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,12 @@
 
 /* 테마 변수 */
 @theme {
-
+    --breakpoint-xs: 365px;
+    --breakpoint-sm: 460px;
+    --breakpoint-md: 640px;
+    --breakpoint-lg: 1024px;
+    --breakpoint-xl: 1280px;
+    --breakpoint-2xl: 1536px;
 }
 
 /* 다크모드 */
