--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,26 @@ Line (곡선 라인 & 테두리)	#00ADB5	청록색 네온 (라인 포인트)*/
 /* 다크모드 */
 @variant dark (&:where([data-them=dark], [data-theme=dark] *));
 
+/* 폰트 */
+@font-face {
+    font-family: "Noto Sans KR";
+    src: url("/src/assets/font/NotoSansKR-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Noto Sans KR";
+    src: url("/src/assets/font/NotoSansKR-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+}
+
 html, body {
     width: 100%;
     min-width: calc(100vw - 20px);
     min-height: 100vh;
+    font-family: "Noto Sans KR", sans-serif;
 }
 
 #JangHwanPark {
