--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ Line (곡선 라인 & 테두리)	#00ADB5	청록색 네온 (라인 포인트)*/
     --color-c-blue: #4285F4;
     --color-c-red: #DB4437;
     --color-c-yellow: #F4B400;
+    --color-h-yellow: #FCE29F;
     --color-c-green: #0F9D58;
 
     /* Light Mode & Dark Mode */
