--- a/src/index.css
+++ b/src/index.css
@@ -17,16 +17,19 @@ Line (곡선 라인 & 테두리)	#00ADB5	청록색 네온 (라인 포인트)*/
     --breakpoint-2xl: 1536px;
 
     /* Color */
+    --color-primary: #0b080c;
+    --color-secondary: #1B1A22;
+    --color-tertiary: #3A3D46;
+    --color-acccent: #08D9D6;
+    --color-success: #4CAF50;
+    --color-warning: #FF9F43;
+    --color-danger: #E74C3C;
+    --color-t-primary: #F0F1F2;
+    --color-sub-text: #A1A6B4;
+
     --color-c-blue: #4285F4;
     --color-c-red: #DB4437;
     --color-c-yellow: #F4B400;
-    --color-h-yellow: #FCE29F;
-    --color-c-green: #0F9D58;
-
-    /* Light Mode & Dark Mode */
-    --color-dark-bg: #1E1E1E;
-    --color-dark-text: #EAEAEA;
-    --color-dark-sub-text: #888;
 
     /* ETC */
     --color-c-purple: #aa42ff;
