--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ Line (곡선 라인 & 테두리)	#00ADB5	청록색 네온 (라인 포인트)*/
     --color-warning: #FF9F43;
     --color-danger: #E74C3C;
     --color-t-primary: #F0F1F2;
-    --color-sub-text: #A1A6B4;
+    --color-t-sub: #A1A6B4;
 
     --color-c-blue: #4285F4;
     --color-c-red: #DB4437;
