--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ Line (곡선 라인 & 테두리)	#00ADB5	청록색 네온 (라인 포인트)*/
 
     --color-c-blue: #4285F4;
     --color-c-red: #DB4437;
+    /*--color-c-yellow: #FDD663;*/
     --color-c-yellow: #F4B400;
 
     /* ETC */
